# thuong_mai_dien_tu

./: .gitignore  README.md  db.sql  fixed_elearning_database.sql
docs/: PROJECT_MO_TA.md
edu-client/: index.html  package-lock.json  package.json  vite.config.ts
edu-client/src/: App.tsx  index.css  vite-env.d.ts
edu-client/src/admin/: AdminDashboard.tsx  AdminLogin.tsx
edu-client/src/common/: Footer.tsx  ProductedRoute.tsx  Tabs.tsx
edu-client/src/context/: CartProvider.tsx  cartContext.ts  toast.tsx  wishlistContext.tsx
edu-client/src/lib/: axios.ts  (+1 more)
edu-sever/: Cargo.toml  database.fixed.sql  database.sql  new.sql  t.md
edu-sever/src/: errors.rs  main.rs  state.rs
edu-sever/src/controllers/: admin.rs  ai.rs  auth.rs  instructor.rs  learning.rs  membership.rs  mod.rs  note.rs  notification.rs  refund.rs  wishlist.rs  withdrawal.rs
edu-sever/src/controllers/cart/: handler.rs
edu-sever/src/controllers/coupon/: handler.rs
edu-sever/src/controllers/course/: create.rs  detail.rs  mod.rs  query.rs
edu-sever/src/controllers/order/: handler.rs
edu-sever/src/controllers/review/: handler.rs
edu-sever/src/middleware/: auth.rs
edu-sever/src/models/: cart.rs  coupon.rs  course.rs  course_card.rs  course_instruction.rs  detail.rs  instructior.rs  learning.rs  mod.rs  order.rs  review.rs  user.rs
edu-sever/src/routes/: admin.rs  ai.rs  auth.rs  coupon.rs  course.rs  instructor.rs  learning.rs  membership.rs  mod.rs  note.rs  notification.rs  refund.rs  user.rs  wishlist.rs  withdrawal.rs
edu-sever/src/services/: cron.rs
edu-sever/src/utils/: mod.rs
(+69 files in other folders)
